RESOLVED FIXED 105128
Fix assertions when doing a full repaint of compositing layers
https://bugs.webkit.org/show_bug.cgi?id=105128
Summary Fix assertions when doing a full repaint of compositing layers
Simon Fraser (smfr)
Reported 2012-12-16 09:21:35 PST
Fix assertions when doing a full repaint of compositing layers
Attachments
Patch (1.68 KB, patch)
2012-12-16 09:24 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2012-12-16 09:24:10 PST
Simon Fraser (smfr)
Comment 2 2012-12-16 10:17:15 PST
Note You need to log in before you can comment on or make changes to this bug.