Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -436,7 +436,7 @@ void RenderLayerBacking::updateAfterLayout(UpdateAfterLayoutFlags flags)
         }
     }
     
-    if (flags & NeedsFullRepaint)
+    if (flags & NeedsFullRepaint && !paintsIntoWindow() && !paintsIntoCompositedAncestor())
         setContentsNeedDisplay();
 }
 
